# mycobot320pi_gripper_moveit2

./: README.md
demo_mycobot_320pi/: CMakeLists.txt  package.xml
demo_mycobot_320pi/config/: moveit.rviz  mtc.rviz  pick_place.yaml
demo_mycobot_320pi/launch/: demo.launch.py  pick_place.launch.py
demo_mycobot_320pi/src/: demo_mycobot_320pi_moveit.cpp  pick_place.cpp  pick_place_2.cpp  pick_place_demo.cpp
mycobot_320pi/: package.xml  setup.py
mycobot_320pi/config/: mycobot_320pi.rviz
mycobot_320pi/launch/: demo.launch.py  detect_marker.launch.py  detect_marker_with_topic.launch.py  mycobot_follow.launch.py  simple_gui.launch.py  slider_control.launch.py  teleop_keyboard.launch.py  test.launch.py
mycobot_320pi/urdf/: mycobot_320_pi_2022.urdf  mycobot_320_pi_gripper_2022.urdf  mycobot_320pi_2022.urdf  mycobot_320pi_2022_gripper.urdf
mycobot_320pi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_320pi_moveit_config/config/: firefighter.ros2_control.xacro  firefighter.srdf  firefighter.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_320pi_with_gripper.ros2_control.xacro  mycobot_320pi_with_gripper.srdf  mycobot_320pi_with_gripper.urdf.xacro  ros2_controllers.yaml
mycobot_320pi_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+2 more)
mycobot_320pi_test/: CMakeLists.txt  package.xml
mycobot_320pi_test/config/: fake_controllers.yaml
mycobot_320pi_test/launch/: demo.launch.py
(+14 files in other folders)
